[package]
name = "wts"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true}
serde_json = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
wts-core = { workspace = true }
memmap2 = { workspace = true }
candle = { version = "0.8.2", package = "candle-core" }